@@ -1,15 +1,13 @@
 # This file is generated by Dist::Zilla::Plugin::CPANFile v6.030
 # Do not edit this file directly. To change prereqs, edit the `dist.ini` file.
 
-requires "Crypt::URandom" => "0.37";
 requires "Fcntl" => "0";
 requires "List::Util" => "1.29";
-requires "Math::Random::ISAAC" => "0";
 requires "Moo" => "0";
+requires "Session::Token" => "0";
 requires "Types::Common" => "2.000000";
 requires "namespace::autoclean" => "0";
 requires "perl" => "v5.14.0";
-recommends "Math::Random::ISAAC::XS" => "0";
 recommends "Ref::Util::XS" => "0";
 recommends "Type::Tiny::XS" => "0";
 
