@@ -6,13 +6,11 @@ use v5.14;
 
 use Moo;
 
-use Crypt::URandom 0.37 qw/ urandom_ub /;
 use Fcntl qw/ O_NONBLOCK O_RDONLY /;
 use List::Util 1.29 qw/ pairmap pairs /;
-use Math::Random::ISAAC;
+use Session::Token;
 use Types::Common 2.000000 qw/ ArrayRef is_ArrayRef Bool HashRef IntRange Str /;
 
-# RECOMMEND PREREQ: Math::Random::ISAAC::XS
 # RECOMMEND PREREQ: Ref::Util::XS
 # RECOMMEND PREREQ: Type::Tiny::XS
 
@@ -138,24 +136,11 @@ has nonces_for => (
     coerce  => sub { my $val = is_ArrayRef( $_[0] ) ? $_[0] : [ $_[0] ] },
 );
 
-=attr nonce_seed_size
-
-This is the size of the random seed data for the L</nonce>. It can be an integer between 16 and 256.
-
-=cut
-
-has nonce_seed_size => (
-    is      => 'lazy',
-    isa     => IntRange[ 16, 256 ],
-    default => 16,
-);
-
 =attr nonce
 
 This is the random nonce that is added to directives in L</nonces_for>.
 
-The nonce is a hex string based on a random 32-bit number, which is generated
-from L<Math::Random::ISAAC>.  The RNG is seeded by L<Crypt::URandom>.
+The nonce is a random string, generated by L<Session::Token> and based on F</dev/urandom>.
 
 If you want to change how it is generated, you can override the C<_build_nonce>
 method in a subclass.
@@ -174,13 +159,8 @@ has nonce => (
 
 sub _build_nonce {
     my ($self) = @_;
-
-    state $rng = do {
-        my $data = urandom_ub( $self->nonce_seed_size );
-        Math::Random::ISAAC->new( unpack( "C*", $data ) );
-    };
-
-    return sprintf( '%x', $rng->irand ^ $$ );
+    state $rng = Session::Token->new;
+    return $rng->get;
 }
 
 =attr header
