@@ -1,6 +1,11 @@
 Revision history for {{ $dist->name }}
 
 {{$NEXT}}
+  [Enhancements]
+  - The nonce is longer and contains mixed-case letters and numbers.
+
+  [Incompatabilities]
+  - The nonce_seed_size attribute was removed.
 
 v0.3.4    2023-11-07 13:09:44+00:00 Europe/London
   [Tests]
